--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,27 @@
 }
 
 .header-bgcolor{
-    background-color: rgb(134, 175, 201);
+    background-color: rgb(144, 134, 201);
 }
 
+.btn{
+    padding: 5px 5px;
+
+    display: flex;
+    align-items: flex-start;
+}
+
+
+.btn-primary{
+    background-color: rgb(80, 40, 179);
+    border: none;
+    color: white;
+}
 
 
 /*navbar*/
 .navbar{
-    height: 3em;
+    height: 4em;
     width: 100%;
     /*test*/
     
@@ -21,14 +34,21 @@
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    
     border-bottom: 1px solid lightgrey;
     background-color: white;
+    padding: 1.5em 1em;
     
 }
 
+.nav-list a{
+    color: black;
+    text-decoration: none;
+}
+
+
 .nav-list{
-    width: 20%;
+    width: 30%;
     /*test*/
 
     display: flex;
@@ -253,6 +273,7 @@
     flex-wrap: wrap;
     
     width: calc(100% / 3);
+    
 
 }
 
