--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,6 @@
 .btn{
     padding: 5px 5px;
 
-    display: flex;
-    align-items: flex-start;
 }
 
 
@@ -19,6 +17,12 @@
     background-color: rgb(80, 40, 179);
     border: none;
     color: white;
+}
+
+
+.fa-arrow-down{
+    font-size: 3em;
+    margin-bottom: 15px;
 }
 
 
@@ -68,8 +72,15 @@
     padding-top: 6em;
 }
 
+
+.container-centered-header a{
+    color: black;
+    text-decoration: none;
+}
+
 .container-centered-header h1{
-    font-size: 3em;
+    font-size: 5em;
+    margin-bottom: 30px;
 }
 
 .header-p-img{
@@ -88,10 +99,24 @@
     justify-content: space-between;
     gap: 5px;
 }
+
+
+.header-img{
+    position: relative;
+}
+
+
+.header-img img{
+    width: 600px;
+    height: auto;
+
+    position: absolute;
+    left: 0;
+    bottom: -70px;
+}
+
+
 /*fine header e navbar*/
-
-
-
 
 
 
