--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 }
 
 .btn{
+    height: 2.5em;
     padding: 5px 5px;
 
 }
@@ -97,7 +98,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 5px;
+    gap: 30px;
 }
 
 
@@ -156,6 +157,11 @@
     flex-direction: column;
 }
 
+.titolino-colonna{
+    font-size: 1em;
+    font-weight: 400;
+}
+
 .utenti-centrato{
     text-align: center;
     border-bottom: 1px solid lightgrey;
@@ -175,6 +181,13 @@
     gap:1em;
 }
 
+
+.fa-check{
+    color: dodgerblue;
+    font-size: 1.5em;
+}
+
+
 .riga-colonna{
     display: flex;
     flex-direction: row;
@@ -184,6 +197,10 @@
 .small-hr{
     width:20%;
     border:1px solid grey;
+}
+
+.errore-grave{
+    height: 1em;
 }
 
 /*/sezione colonne*/
