--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ width: 30%;
     display: flex;
     flex-direction: row;
     
-    width: 100vw;
+    width: 100%;
 
 }
 
@@ -339,7 +339,11 @@ width: 30%;
     flex-direction: row;
     flex-wrap: wrap;
     
-    width: calc(100% / 3);
+    width: calc(100vw / 3);
+    height: calc(100vw / 3);
+
+
+    
     
 
 }
@@ -347,6 +351,55 @@ width: 30%;
 .single-partner{
     width: 50%;
     height:50%;
+    text-align: center;
+    
+}
+
+#designit{
+    background-color: rgb(109, 214, 109) ;
+}
+
+
+#asu{
+    background-color: rgb(72, 11, 11) ;
+}
+
+
+#uf{
+    background-color: dodgerblue ;
+}
+
+
+#topps{
+    background-color: red ;
+}
+
+
+#worldbr{
+    background-color: rgb(136, 0, 0) ;
+}
+
+
+#hearst{
+    background-color: rgb(213, 196, 243) ;
+}
+
+
+#lonelyplanet{
+    background-color: navy ;
+}
+
+
+#ccoutdoor{
+    background-color: yellow ;
+}
+
+
+
+.single-partner img{
+    width:50%;
+    height: auto;
+    filter: invert(1);
     
 }
 
@@ -355,10 +408,10 @@ width: 30%;
     flex-direction: column;
     gap:1em;
     padding: 1em;
+    flex-grow: 1;
 
-    min-width: 20%;
-    max-width: calc(100% / 3);
     background-color: lightgrey;
+    width: calc(100vw / 3);
 }
 
 .descrizione-partner img{
