--- a/css/style.css
+++ b/css/style.css
@@ -349,9 +349,13 @@ width: 30%;
 }
 
 .single-partner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
     width: 50%;
     height:50%;
-    text-align: center;
+    
     
 }
 
