--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 
 
 .btn-secondary{
-    background-color: transparent;
+    background-color: white;
     border: 1px solid grey;
     color: grey;
 }
@@ -114,7 +114,7 @@
 
 
 .header-img img{
-    width: 600px;
+    width: 700px;
     height: auto;
 
     position: absolute;
@@ -457,6 +457,7 @@ width: 30%;
 .faq-row{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 10px;
     padding: 3em 0;
 }
@@ -465,6 +466,8 @@ width: 30%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 /*/fine parte inferiore main*/
 
@@ -487,6 +490,7 @@ width: 30%;
 
 footer .small-hr{
     border-color: white;
+    width: 15%;
 }
 
 .vertical-ul{
@@ -506,6 +510,7 @@ footer .small-hr{
     justify-content: space-between;
 
     list-style-type: none;
+    
 }
 
 .vertical-ul-inner{
@@ -515,4 +520,10 @@ footer .small-hr{
    gap: 10px;
    
     list-style-type: none;
+    margin-bottom: 70px;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
 }
