--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,23 @@
     color: white;
 }
 
+.btn-primary:hover{
+    background-color: rgb(54, 12, 161);
+    color: lightgrey;
+    cursor: pointer;
+}
 
 .btn-secondary{
     background-color: white;
     border: 1px solid grey;
     color: grey;
+}
+
+.btn-secondary:hover{
+    background-color: lightgrey;
+    border: 1px solid rgb(79, 79, 79);
+    color:  rgb(79,79,79);
+    cursor: pointer;
 }
 
 .fa-arrow-down{
@@ -45,21 +57,44 @@
 
     display: flex;
     justify-content: space-between;
-    
+    align-items: center;
     border-bottom: 1px solid lightgrey;
     background-color: white;
-    padding: 1.5em 1em;
     
+    
+}
+
+.nav-flex-li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em 0.5em;
+
+}
+
+.nav-flex-li-nohover{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em 0.5em;
+
+}
+
+.nav-flex-li:hover{
+    border-bottom: 5px solid dodgerblue;
+
+
 }
 
 .nav-list a{
     color: black;
     text-decoration: none;
+    
 }
 
 
 .nav-list{
-    width: 30%;
+    width: 40%;
     /*test*/
 
     display: flex;
@@ -526,4 +561,8 @@ footer .small-hr{
 footer a{
     color: white;
     text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
 }
