added bonus to faqs

--- a/css/style.css
+++ b/css/style.css
@@ -503,11 +503,21 @@ width: 30%;
     justify-content: space-between;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 1em;
 }
+
+
+.faq-container-espandibile{
+    height: 2.5em;
+    overflow: hidden;
+    transition: height 2s;
+}
+
+.faq-container-espandibile:hover{
+    height: 5em;
+}
+
 /*/fine parte inferiore main*/
-
-
-
 
 /*footer*/
 .footer-style{
